# zodiac

./: Dockerfile  README.md  compose.yml  nginx.conf  pyproject.toml
src/zodiac/: __init__.py  main.py
src/zodiac/entities/: astro.py  employee.py  hr.py  location.py  person.py  team.py
src/zodiac/entities/enums/: roles.py
src/zodiac/entities/vector/: person.py
src/zodiac/services/: astology.py  qdrant_client.py
zodiac/: app.py  config.py
zodiac/api/: auth.py  routes.py
zodiac/entities/db/: employee.py  team.py  user.py
zodiac/entities/dto/: astro.py  auth.py  base.py  create.py  location.py  member.py  team.py
zodiac/entities/enums/: roles.py
zodiac/entities/vector/: person.py
zodiac/services/: astrology.py  geo.py
